2008-11-12  Mike Krüger  <mkrueger@novell.com>

	* options/MonoDevelop-templates.xml: changed some default templates.

2008-11-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.mdp:
	* icons/AboutImage.png:
	* icons/Icons.AboutImage:
	* MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs: Make the about box
	display properly with big fonts.

2008-11-11  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: fixed bug in go to
	definition for types in referenced assemblies.

2008-11-10  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs:
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: impl. enh. "Bug 442022 -
	Improve annoying behaviour of the MD notebook".

2008-11-10  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs: Added enable auto
	completion option.

2008-11-07  Eric Butler  <eric@extremeboredom.net>
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Set toolbar variables to
	null when window is closing so that EnsureToolbarBoxSeparator won't
	try to do anything.

2008-11-07  Eric Butler  <eric@extremeboredom.net>

	* MonoDevelop.Ide.Gui.BrowserDisplayBinding/HtmlViewPane.cs: Show
	"Preview" instead of "Web Browser" if a secondary view, remove
	outdated/broken hack for GTK+ 2.4, and don't allow user to un-check
	buttons.
		
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Move separator to end of
	toolbar after adding a button if one already exists.

2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/RootWorkspace.cs:
	* MonoDevelop.Ide.Gui/ProjectOperations.cs:
	* MonoDevelop.Ide.Gui.Dialogs/IncludeFilesDialog.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs: Use
	new default build action API.

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs: Use
	default build action when template does not have an explicit build